# RACER

swarm_exploration/active_perception/include/active_perception/: hgrid.h
swarm_exploration/active_perception/src/: hgrid.cpp  uniform_grid.cpp
swarm_exploration/bspline_opt/: CMakeLists.txt
swarm_exploration/exploration_manager/: CMakeLists.txt
swarm_exploration/exploration_manager/config/: drone_planner_params_cave1.yaml  drone_planner_params_pasillo.yaml  drone_planner_params_pasillo_largo.yaml  drone_planner_params_pillar.yaml  drone_planner_params_rooms1.yaml  drone_planner_params_rooms1_big.yaml  drone_planner_params_rooms2.yaml  drone_planner_params_rooms2_2.yaml  drone_planner_params_rooms2_big.yaml  drone_planner_params_tunnel.yaml  map_floor_cave1.yaml  map_floor_pasillo_largo.yaml  map_floor_pillar.yaml  map_floor_rooms1.yaml  map_floor_rooms1_big.yaml  map_floor_rooms2.yaml  map_floor_rooms2_big.yaml  map_floor_std.yaml  map_floor_tunnel.yaml  single_drone_planner.yaml
swarm_exploration/exploration_manager/include/exploration_manager/: expl_data.h  fast_exploration_fsm.h  fast_exploration_manager.h
swarm_exploration/exploration_manager/launch/: simulator_light.xml  single_drone_exploration.xml  single_drone_exploration_slow.xml  single_drone_planner.xml  swarm_exploration.launch  swarm_exploration_mod.launch  test_2drones.launch  test_4drones.launch
swarm_exploration/exploration_manager/src/: fast_exploration_fsm.cpp  fast_exploration_manager.cpp  test_vrp.cpp
swarm_exploration/plan_env/include/plan_env/: map_ros.h
swarm_exploration/plan_env/src/: map_ros.cpp
swarm_exploration/plan_manage/: README.md
uav_simulator/Utils/odom_visualization/: package.xml
uav_simulator/Utils/uav_utils/: CMakeLists.txt
uav_simulator/Utils/waypoint_generator/: CMakeLists.txt
uav_simulator/map_generator/resource/: pasillo.pcd  tmp.pcd
uav_simulator/map_generator/src/: map_publisher.cpp  map_recorder.cpp
uav_simulator/poscmd_2_odom/: CMakeLists.txt
uav_simulator/poscmd_2_odom/src/: poscmd_2_odom.cpp
